--- a/templates/facilitator_profile.html
+++ b/templates/facilitator_profile.html
@@ -32,9 +32,10 @@
         <div class="profile-card">
             <div class="profile-card-header">
                 <h1 class="profile-card-title">Account Information</h1>
-                {% if current_user and current_user.role.value == 'facilitator' %}
-                    <a href="{{ url_for('facilitator.edit_profile') }}" class="edit-profile-btn">Edit Profile</a>
-                {% endif %}
+                <a href="{{ url_for('facilitator.edit_profile') }}" class="edit-profile-btn">
+                    <span class="material-icons">edit</span>
+                    Edit Profile
+                </a>
             </div>
 
             <div class="profile-content">
