--- a/templates/edit_facilitator_profile.html
+++ b/templates/edit_facilitator_profile.html
@@ -60,7 +60,19 @@
                     
                     <div class="form-group">
                         <div class="password-change-section">
-                            <label for="change_password">Change Password</label>
+                            <div class="password-section-header">
+                                <label for="change_password">Change Password</label>
+                                <div class="tooltip">
+                                    <span class="material-icons tooltip-icon">info</span>
+                                    <div class="tooltip-content">
+                                        <strong>Password Requirements:</strong><br>
+                                        • Minimum 8 characters<br>
+                                        • At least 1 capital letter<br>
+                                        • At least 1 special character<br>
+                                        • At least 1 number
+                                    </div>
+                                </div>
+                            </div>
                             <button type="button" id="togglePasswordSection" class="password-toggle-btn">
                                 <span class="material-icons">key</span>
                                 Change Password
