--- a/templates/login.html
+++ b/templates/login.html
@@ -49,7 +49,7 @@
       </div>
       <div class="input-box">
         <i class='bx bxs-lock-alt'></i>
-        <input type="password" name="password" placeholder="password" required>
+        <input type="password" name="password" placeholder="Password" required>
       </div>
       <div class="remember-forgot">
         <label><input type="checkbox"> Remember me</label>
