added a button in fac that sets that they are free always

--- a/templates/facilitator_dashboard.html
+++ b/templates/facilitator_dashboard.html
@@ -331,6 +331,10 @@
         </span></p>
       </div>
       <div class="unavailability-actions">
+        <button id="available-all-days-btn" class="action-btn" style="background-color: #4CAF50; color: white; margin-right: 10px;">
+          <span class="material-icons">check_circle</span>
+          Available All Days
+        </button>
         <button id="refresh-unavailability" class="action-btn">
           <span class="material-icons">refresh</span>
           Refresh
